k8s/cert-manager/coit-frontend-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bhargav.com.34.93.137.141.sslip.io
    secretName:  bhargav.com.34.93.137.141.sslip.io
  rules:
  - host: bhargav.com.34.93.137.141.sslip.io
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
